Fix alignment of text on map domain step
Re issue #12927. Remove 'margin-top: -5px' from class .domain-product-price

--- a/client/components/domains/map-domain-step/style.scss
+++ b/client/components/domains/map-domain-step/style.scss
@@ -21,7 +21,6 @@
 
 		@include breakpoint( ">960px" ) {
 			float: right;
-			margin-top: -5px;
 			margin-bottom: 0;
 		}
 	}
